--- a/package.json
+++ b/package.json
@@ -9,22 +9,30 @@
     "build": "tsc -p tsconfig.build.json",
     "build:watch": "tsc -w -p tsconfig.build.json",
     "lint": "eslint . --ext .ts,.tsx",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "prisma:migrate": "npx prisma migrate dev",
+    "prisma:deploy": "npx prisma migrate deploy",
+    "prisma:seed": "npx prisma migrate reset --preview-feature"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   },
   "author": "Federico González <fede@nazgul.com.ar>",
   "license": "Apache-2.0",
   "dependencies": {
+    "@prisma/client": "^4.14.1",
     "bcryptjs": "^2.4.3",
     "commander": "^10.0.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.0",
     "module-alias": "^2.2.2",
     "path": "^0.12.7",
-    "socket-io": "^1.0.0",
     "socket.io": "^4.6.1",
     "tslib": "~2.5.2",
-    "winston": "^3.8.2"
+    "winston": "^3.8.2",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.2",
@@ -33,24 +41,21 @@
     "@types/http-errors": "^2.0.1",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/module-alias": "^2.0.1",
-    "@types/node": "~20.2.1",
+    "@types/node": "~20.2.3",
     "@typescript-eslint/eslint-plugin": "~5.59.6",
     "@typescript-eslint/parser": "~5.59.6",
-    "dotenv": "^16.0.3",
     "eslint": "~8.41.0",
     "eslint-config-prettier": "~8.8.0",
-    "husky": "^8.0.0",
+    "husky": "^8.0.3",
     "nodemon": "^2.0.22",
     "prettier": "~2.8.8",
+    "prisma": "^4.14.1",
     "rimraf": "^5.0.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "tsutils": "~3.21.0",
     "typescript": "~5.0.4"
-  },
-  "resolutions": {
-    "got": "11.8.5"
   },
   "repository": {
     "type": "git",
