--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,5 +1,5 @@
 {
   "extends": "./tsconfig.json",
   "include": ["src"],
-  "exclude": ["node_modules", "build", "**/*.spec.ts", "**/*.test.ts"]
+  "exclude": ["node_modules", "build"]
 }
