--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.0",
+    "luxon": "^3.3.0",
     "module-alias": "^2.2.2",
     "path": "^0.12.7",
     "socket.io": "^4.6.1",
@@ -40,6 +41,7 @@
     "@types/express": "^4.17.17",
     "@types/http-errors": "^2.0.1",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/luxon": "^3.3.0",
     "@types/module-alias": "^2.0.1",
     "@types/node": "~20.2.3",
     "@typescript-eslint/eslint-plugin": "~5.59.6",
