--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Federico González <fede@nazgul.com.ar>",
   "license": "Apache-2.0",
   "dependencies": {
+    "@afipsdk/afip.js": "^0.7.11",
     "@prisma/client": "^4.14.1",
     "bcryptjs": "^2.4.3",
     "commander": "^10.0.1",
