--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "noImplicitThis": false,
     "noUnusedLocals": false,
     "noUnusedParameters": true,
-    "outDir": "./build",
+    "outDir": "./dist",
     "sourceMap": true,
     "strict": true,
     "strictNullChecks": true,
@@ -24,5 +24,5 @@
     "typeRoots": ["./src/types", "./node_modules/@types"]
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "build"]
+  "exclude": ["node_modules", "dist"]
 }
