--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "ts-node -r tsconfig-paths/register -r dotenv/config src/index",
     "dev": "nodemon --config restart.json",
     "prebuild": "npm run lint",
-    "build": "tsc -p tsconfig.build.json",
-    "build:watch": "tsc -w -p tsconfig.build.json",
+    "build": "tsc -p tsconfig.json",
+    "build:watch": "tsc -w -p tsconfig.json",
     "lint": "eslint . --ext .ts,.tsx",
     "prepare": "husky install",
     "prisma:migrate": "npx prisma migrate dev",
@@ -20,7 +20,7 @@
   "author": "Federico González <fede@nazgul.com.ar>",
   "license": "Apache-2.0",
   "dependencies": {
-    "@afipsdk/afip.js": "^0.7.11",
+    "@afipsdk/afip.js": "^1.1.0",
     "@prisma/client": "^4.14.1",
     "bcryptjs": "^2.4.3",
     "commander": "^10.0.1",
@@ -32,7 +32,7 @@
     "module-alias": "^2.2.2",
     "path": "^0.12.7",
     "socket.io": "^4.6.1",
-    "tslib": "~2.5.2",
+    "tslib": "^2.6.2",
     "winston": "^3.8.2",
     "zod": "^3.21.4"
   },
@@ -50,7 +50,7 @@
     "eslint": "~8.41.0",
     "eslint-config-prettier": "~8.8.0",
     "husky": "^8.0.3",
-    "nodemon": "^2.0.22",
+    "nodemon": "^3.0.3",
     "prettier": "~2.8.8",
     "prisma": "^4.14.1",
     "rimraf": "^5.0.1",
