--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,7 +1,5 @@
 {
   "extends": "./tsconfig.json",
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"],
-  //"externalDependencies": "none",
-  "importHelpers": false
+  "exclude": ["node_modules", "dist"]
 }
