--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,6 @@
     "baseUrl": ".",
     "forceConsistentCasingInFileNames": true,
     "importHelpers": true,
-    "jsx": "react",
     "module": "CommonJS",
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
@@ -20,9 +19,10 @@
     "sourceMap": true,
     "strict": true,
     "strictNullChecks": true,
-    "target": "ES2015",
-    "typeRoots": ["./src/types", "./node_modules/@types"]
+    "target": "ES6",
+    "typeRoots": ["./src/types", "./node_modules/@types"],
+    "skipLibCheck": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "prisma", ".husky"]
 }
